--- a/217. Contains Duplicate.ipynb
+++ b/217. Contains Duplicate.ipynb
@@ -11,6 +11,56 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "### hash set\n",
+    "* 時間複雜度: O(n)\n",
+    "* 空間複雜度: O(n)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 1,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from typing import List\n",
+    "\n",
+    "class Solution:\n",
+    "    def containsDuplicate(self, nums: List[int]) -> bool:\n",
+    "        hash_set = set() # space: O(n)\n",
+    "        for num in nums: # time: O(n)\n",
+    "            if num in hash_set:\n",
+    "                return True\n",
+    "            else:\n",
+    "                hash_set.add(num)\n",
+    "                \n",
+    "        return False"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "True"
+      ]
+     },
+     "execution_count": 2,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "nums = [1,2,3,1]\n",
+    "Solution().containsDuplicate(nums)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "### Sorting\n",
     "* 時間複雜度: O(n log n)\n",
     "* 空間複雜度: O(1)"
@@ -31,61 +81,6 @@
     "        \n",
     "        return False"
    ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "### hash set\n",
-    "* 時間複雜度: O(n)\n",
-    "* 空間複雜度: O(n)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "class Solution:\n",
-    "    def containsDuplicate(self, nums: List[int]) -> bool:\n",
-    "        hash_set = set()\n",
-    "        for num in nums:\n",
-    "            if num in hash_set:\n",
-    "                return True\n",
-    "            else:\n",
-    "                hash_set.add(num)\n",
-    "                \n",
-    "        return False"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "<img src=\"img/217.jpg\" style=\"zoom:50%\"/>"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "### set\n",
-    "* 時間複雜度: O(n)\n",
-    "* 空間複雜度: O(n)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "class Solution:\n",
-    "    def containsDuplicate(self, nums: List[int]) -> bool:\n",
-    "        \n",
-    "        return len(nums) != len(set(nums))"
-   ]
   }
  ],
  "metadata": {
@@ -104,7 +99,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.6"
+   "version": "3.11.2"
   },
   "orig_nbformat": 4
  },
