--- a/242. Valid Anagram.ipynb
+++ b/242. Valid Anagram.ipynb
@@ -12,6 +12,38 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "**時間複雜度: O( $n$ )**   \n",
+    "**空間複雜度: O( $1$ )** "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "class Solution:\n",
+    "    def isAnagram(self, s: str, t: str) -> bool:\n",
+    "        if len(s) != len(t):\n",
+    "            return False\n",
+    "\n",
+    "        counts = [0] * 26 # space: O(1)，26位字母是固定的常數\n",
+    "\n",
+    "        for i in range(len(s)): # time: O(n)，輸入的長度\n",
+    "            counts[ord(s[i]) - ord(\"a\")] += 1\n",
+    "            counts[ord(t[i]) - ord(\"a\")] -= 1\n",
+    "\n",
+    "        for count in counts: # time: O(1)，26位字母是固定的常數\n",
+    "            if count != 0:\n",
+    "                return False\n",
+    "\n",
+    "        return True"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "**時間複雜度: O(n)**  \n",
     "**空間複雜度: O(1)**"
    ]
