--- a/49. Group Anagrams.ipynb
+++ b/49. Group Anagrams.ipynb
@@ -11,6 +11,60 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "**時間複雜度: O( $n*k$ )**   \n",
+    "**空間複雜度: O( $n*k$ )** "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 1,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from typing import List\n",
+    "from collections import defaultdict\n",
+    "\n",
+    "class Solution:\n",
+    "    def groupAnagrams(self, strs: List[str]) -> List[List[str]]:\n",
+    "        result = defaultdict(list) # space: O(n*k)，n是字串的數量，k是字串的最大長度\n",
+    "\n",
+    "        for word in strs: # time: O(n)\n",
+    "            counts = [0] * 26 # space: O(1)\n",
+    "            for char in word: # time: O(k)\n",
+    "                counts[ord(char) - ord(\"a\")] += 1\n",
+    "\n",
+    "            result[tuple(counts)].append(word)\n",
+    "\n",
+    "        return list(result.values())\n",
+    "        "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[['eat', 'tea', 'ate'], ['tan', 'nat'], ['bat']]"
+      ]
+     },
+     "execution_count": 2,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "strs = [\"eat\",\"tea\",\"tan\",\"ate\",\"nat\",\"bat\"]\n",
+    "\n",
+    "Solution().groupAnagrams(strs)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "**時間複雜度: O(n * k)**  \n",
     "**空間複雜度: O(n)**"
    ]
@@ -184,7 +238,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.6"
+   "version": "3.11.2"
   },
   "orig_nbformat": 4,
   "vscode": {
