--- a/347. Top K Frequent Elements.ipynb
+++ b/347. Top K Frequent Elements.ipynb
@@ -11,6 +11,68 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "* 時間複雜度: O( $n$ )\n",
+    "* 空間複雜度: O( $n$ )"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 1,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from collections import defaultdict\n",
+    "from typing import List\n",
+    "\n",
+    "class Solution:\n",
+    "    def topKFrequent(self, nums: List[int], k: int) -> List[int]:\n",
+    "        # 計算每個數字出現的次數\n",
+    "        counts = defaultdict(int) # space: O(m)，m 為不重複數字的個數，m ≈ n\n",
+    "        for num in nums: # time: O(n)\n",
+    "            counts[num] += 1\n",
+    "\n",
+    "        # 建立桶子，索引代表出現次數，值為出現該次數的數字列表\n",
+    "        # 因為一個數字最多出現 len(nums) 次，所以桶子大小為 len(nums) + 1\n",
+    "        bucket = [[] for _ in range(len(nums) + 1)] # space: O(n)\n",
+    "\n",
+    "        # 將每個數字放入對應次數的桶子中\n",
+    "        for num, count in counts.items(): # time: O(m)，m 為不重複數字的個數，m ≈ n\n",
+    "            bucket[count].append(num)\n",
+    "\n",
+    "        # 從後往前遍歷桶子(從最高頻率開始)，收集前k個數字\n",
+    "        result = [] # space: O(k)，k < n\n",
+    "        for i in range(len(bucket) - 1, 0, -1): # time: O(n)\n",
+    "            for num in bucket[i]:\n",
+    "                result.append(num)\n",
+    "                if len(result) == k:\n",
+    "                    return result"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[3, 1]"
+      ]
+     },
+     "execution_count": 2,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "nums = [1,1,1,2,2,3,3,3,3]; k = 2\n",
+    "Solution().topKFrequent(nums, k) # [3, 1]"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "* 時間複雜度: O( $n + (m * log {_2} {k}) + k $ )\n",
     "* 空間複雜度: O( $m + k$ )"
    ]
@@ -109,7 +171,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.11.2"
+   "version": "3.11.11"
   },
   "orig_nbformat": 4,
   "vscode": {
