--- a/238. Product of Array Except Self.ipynb
+++ b/238. Product of Array Except Self.ipynb
@@ -24,12 +24,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
+    "from typing import List\n",
+    "\n",
     "class Solution:\n",
-    "    def productExceptSelf(self, nums):\n",
+    "    def productExceptSelf(self, nums: List[int]) -> List[int]:\n",
     "        n = len(nums)\n",
     "\n",
     "        result = [1] * n # space: O(n)\n",
@@ -59,7 +61,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
@@ -107,7 +109,7 @@
        "[24, 12, 8, 6]"
       ]
      },
-     "execution_count": 25,
+     "execution_count": 2,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -138,8 +140,10 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "from typing import List\n",
+    "\n",
     "class Solution:\n",
-    "    def productExceptSelf(self, nums):\n",
+    "    def productExceptSelf(self, nums: List[int]) -> List[int]:\n",
     "        n = len(nums)\n",
     "\n",
     "        prefix = [1] # space: O(n)\n",
