--- a/125. Valid Palindrome.ipynb
+++ b/125. Valid Palindrome.ipynb
@@ -8,6 +8,14 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "**時間複雜度: O( $n$ )**  \n",
+    "**空間複雜度: O( $1$ )**"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 1,
    "metadata": {},
@@ -15,30 +23,28 @@
    "source": [
     "class Solution:\n",
     "    def isPalindrome(self, s: str) -> bool:\n",
-    "        print(f\"s = {s}\")\n",
-    "        l = 0\n",
-    "        r = len(s) - 1\n",
-    "        while l < r:\n",
-    "            print(f\"{'-'*100}\\norginal: l = {l}, r = {r}\")\n",
-    "            while l < r and not s[l].isalnum():\n",
-    "                print(f\"( l({l}) < r({r}) ) and ( not s[l].isalnum() = not '{s[l]}'.isalnum() = {not s[l].isalnum()} )\")\n",
-    "                l += 1\n",
-    "                print(f\"new:  l = {l}, r = {r}\\n\")\n",
+    "        # 初始化左右指標\n",
+    "        left = 0 # space: O(1)\n",
+    "        right = len(s) - 1 # space: O(1)\n",
     "\n",
-    "            while l < r and not s[r].isalnum():\n",
-    "                print(f\"( l({l}) < r({r}) ) and ( not s[r].isalnum() = not '{s[r]}'.isalnum() = {not s[r].isalnum()} )\")\n",
-    "                r -= 1\n",
-    "                print(f\"new:  l = {l}, r = {r}\\n\")\n",
+    "        # 當左指標小於右指標時持續進行比對\n",
+    "        while left < right: # time: O(n/2) = O(n)\n",
+    "            # 略過左側不是英數字的字元\n",
+    "            while left < right and not s[left].isalnum():\n",
+    "                left += 1\n",
+    "            # 略過右側不是英數字的字元\n",
+    "            while left < right and not s[right].isalnum():\n",
+    "                right -= 1\n",
     "\n",
-    "            if s[l].lower() != s[r].lower():\n",
-    "                print(f\"(s[l].lower() = s[{l}].lower() = '{s[l]}'.lower() = {s[l].lower()}) != (s[r].lower() = s[{r}].lower() = '{s[r]}'.lower() = {s[r].lower()})\")\n",
-    "                return False\n",
+    "            # 比對左右指標指向的字元（忽略大小寫）\n",
+    "            if s[left].lower() != s[right].lower():\n",
+    "                return False  # 若不相同則不是回文\n",
     "\n",
-    "            print(f\"palindrome: (s[l].lower() = s[{l}].lower() = '{s[l]}'.lower() = {s[l].lower()}) == (s[r].lower() = s[{r}].lower() = '{s[r]}'.lower() = {s[r].lower()})\")\n",
-    "            l += 1\n",
-    "            r -= 1\n",
-    "        \n",
-    "        return True"
+    "            # 移動指標進行下一輪比對\n",
+    "            left += 1\n",
+    "            right -= 1\n",
+    "\n",
+    "        return True  # 全部比對成功則為回文"
    ]
   },
   {
@@ -46,73 +52,6 @@
    "execution_count": 2,
    "metadata": {},
    "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "s = A man, a plan, a canal: Panama\n",
-      "----------------------------------------------------------------------------------------------------\n",
-      "orginal: l = 0, r = 29\n",
-      "palindrome: (s[l].lower() = s[0].lower() = 'A'.lower() = a) == (s[r].lower() = s[29].lower() = 'a'.lower() = a)\n",
-      "----------------------------------------------------------------------------------------------------\n",
-      "orginal: l = 1, r = 28\n",
-      "( l(1) < r(28) ) and ( not s[l].isalnum() = not ' '.isalnum() = True )\n",
-      "new:  l = 2, r = 28\n",
-      "\n",
-      "palindrome: (s[l].lower() = s[2].lower() = 'm'.lower() = m) == (s[r].lower() = s[28].lower() = 'm'.lower() = m)\n",
-      "----------------------------------------------------------------------------------------------------\n",
-      "orginal: l = 3, r = 27\n",
-      "palindrome: (s[l].lower() = s[3].lower() = 'a'.lower() = a) == (s[r].lower() = s[27].lower() = 'a'.lower() = a)\n",
-      "----------------------------------------------------------------------------------------------------\n",
-      "orginal: l = 4, r = 26\n",
-      "palindrome: (s[l].lower() = s[4].lower() = 'n'.lower() = n) == (s[r].lower() = s[26].lower() = 'n'.lower() = n)\n",
-      "----------------------------------------------------------------------------------------------------\n",
-      "orginal: l = 5, r = 25\n",
-      "( l(5) < r(25) ) and ( not s[l].isalnum() = not ','.isalnum() = True )\n",
-      "new:  l = 6, r = 25\n",
-      "\n",
-      "( l(6) < r(25) ) and ( not s[l].isalnum() = not ' '.isalnum() = True )\n",
-      "new:  l = 7, r = 25\n",
-      "\n",
-      "palindrome: (s[l].lower() = s[7].lower() = 'a'.lower() = a) == (s[r].lower() = s[25].lower() = 'a'.lower() = a)\n",
-      "----------------------------------------------------------------------------------------------------\n",
-      "orginal: l = 8, r = 24\n",
-      "( l(8) < r(24) ) and ( not s[l].isalnum() = not ' '.isalnum() = True )\n",
-      "new:  l = 9, r = 24\n",
-      "\n",
-      "palindrome: (s[l].lower() = s[9].lower() = 'p'.lower() = p) == (s[r].lower() = s[24].lower() = 'P'.lower() = p)\n",
-      "----------------------------------------------------------------------------------------------------\n",
-      "orginal: l = 10, r = 23\n",
-      "( l(10) < r(23) ) and ( not s[r].isalnum() = not ' '.isalnum() = True )\n",
-      "new:  l = 10, r = 22\n",
-      "\n",
-      "( l(10) < r(22) ) and ( not s[r].isalnum() = not ':'.isalnum() = True )\n",
-      "new:  l = 10, r = 21\n",
-      "\n",
-      "palindrome: (s[l].lower() = s[10].lower() = 'l'.lower() = l) == (s[r].lower() = s[21].lower() = 'l'.lower() = l)\n",
-      "----------------------------------------------------------------------------------------------------\n",
-      "orginal: l = 11, r = 20\n",
-      "palindrome: (s[l].lower() = s[11].lower() = 'a'.lower() = a) == (s[r].lower() = s[20].lower() = 'a'.lower() = a)\n",
-      "----------------------------------------------------------------------------------------------------\n",
-      "orginal: l = 12, r = 19\n",
-      "palindrome: (s[l].lower() = s[12].lower() = 'n'.lower() = n) == (s[r].lower() = s[19].lower() = 'n'.lower() = n)\n",
-      "----------------------------------------------------------------------------------------------------\n",
-      "orginal: l = 13, r = 18\n",
-      "( l(13) < r(18) ) and ( not s[l].isalnum() = not ','.isalnum() = True )\n",
-      "new:  l = 14, r = 18\n",
-      "\n",
-      "( l(14) < r(18) ) and ( not s[l].isalnum() = not ' '.isalnum() = True )\n",
-      "new:  l = 15, r = 18\n",
-      "\n",
-      "palindrome: (s[l].lower() = s[15].lower() = 'a'.lower() = a) == (s[r].lower() = s[18].lower() = 'a'.lower() = a)\n",
-      "----------------------------------------------------------------------------------------------------\n",
-      "orginal: l = 16, r = 17\n",
-      "( l(16) < r(17) ) and ( not s[l].isalnum() = not ' '.isalnum() = True )\n",
-      "new:  l = 17, r = 17\n",
-      "\n",
-      "palindrome: (s[l].lower() = s[17].lower() = 'c'.lower() = c) == (s[r].lower() = s[17].lower() = 'c'.lower() = c)\n"
-     ]
-    },
     {
      "data": {
       "text/plain": [
@@ -146,7 +85,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.10"
+   "version": "3.12.8"
   },
   "orig_nbformat": 4,
   "vscode": {
