--- a/15. 3Sum.ipynb
+++ b/15. 3Sum.ipynb
@@ -26,7 +26,8 @@
     "        nums.sort() # 將輸入的數組進行排序 # time: O(nlogn), space: O(1)\n",
     "        print(f\"nums = {nums}\")\n",
     "\n",
-    "        result = [] # space: O(n^2)，所有三元組都有效\n",
+    "        result = [] # space: O(n^2)，兩個迴圈內的所有三元組都有效\n",
+    "\n",
     "        # 遍歷數組，直到倒數第三個元素 # time: O(n^2)\n",
     "        for i in range(len(nums)-2): # time: O(n)\n",
     "            print(f\"{'-'*100}\") \n",
@@ -140,6 +141,13 @@
     "nums = [-1,0,1,2,-1,-4]\n",
     "Solution().threeSum(nums)"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
@@ -158,7 +166,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.11.2"
+   "version": "3.12.8"
   },
   "orig_nbformat": 4
  },
