--- a/20. Valid Parentheses.ipynb
+++ b/20. Valid Parentheses.ipynb
@@ -41,22 +41,33 @@
    "source": [
     "class Solution:\n",
     "    def isValid(self, s: str) -> bool:\n",
-    "        stack = []\n",
-    "        hash_table = {\n",
+    "        # 建立一個字典，將每個右括號對應到對應的左括號\n",
+    "        close_to_open = {\n",
     "            \")\": \"(\",\n",
-    "            \"]\": \"[\",\n",
-    "            \"}\": \"{\"\n",
-    "        }\n",
-    "        \n",
-    "        for char in s:\n",
-    "            if char in hash_table.values(): # 如果是左括號，就放進stack\n",
-    "                stack.append(char)\n",
-    "            elif (stack == []) or (stack.pop() != hash_table[char]): # 如果是右括號，就檢查stack是否為空，或是pop出來的左括號是否與右括號對應\n",
-    "                return False\n",
+    "            \"}\": \"{\",\n",
+    "            \"]\": \"[\"\n",
+    "        } # space O(n)\n",
     "\n",
-    "        return stack == []\n",
-    "    \n",
-    "    \n",
+    "        # 使用堆疊來記錄左括號\n",
+    "        stack = []\n",
+    "\n",
+    "        # 遍歷字串中的每個字元\n",
+    "        for char in s: # time: O(n)\n",
+    "            # 如果是右括號\n",
+    "            if char in close_to_open:\n",
+    "                # 如果堆疊非空且頂部元素是對應的左括號，則匹配成功，將左括號從堆疊中移除\n",
+    "                if stack and stack[-1] == close_to_open[char]:\n",
+    "                    stack.pop()\n",
+    "                else:\n",
+    "                    # 否則表示括號不匹配，返回 False\n",
+    "                    return False\n",
+    "            else:\n",
+    "                # 如果是左括號，推入堆疊等待之後匹配\n",
+    "                stack.append(char)\n",
+    "\n",
+    "        # 若堆疊為空，表示所有括號都已正確匹配\n",
+    "        return not stack\n",
+    "\n",
     "Solution().isValid(\"[({})]\")"
    ]
   },
@@ -105,7 +116,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3.8.7 ('.venv': venv)",
+   "display_name": "Python 3",
    "language": "python",
    "name": "python3"
   },
@@ -119,14 +130,9 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.6"
+   "version": "3.12.9"
   },
-  "orig_nbformat": 4,
-  "vscode": {
-   "interpreter": {
-    "hash": "6a07fcf0145f94b3f971c13d061528107de20ab7b779375f96dab9bbac6a85db"
-   }
-  }
+  "orig_nbformat": 4
  },
  "nbformat": 4,
  "nbformat_minor": 2
