--- a/23. Merge k Sorted Lists.ipynb
+++ b/23. Merge k Sorted Lists.ipynb
@@ -9,114 +9,243 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
-    "'''Runtime: 80.59%, Memory: 92.78%'''\n",
-    "\n",
     "# Definition for singly-linked list.\n",
-    "# class ListNode:\n",
-    "#     def __init__(self, val=0, next=None):\n",
-    "#         self.val = val\n",
-    "#         self.next = next\n",
-    "class Solution:\n",
-    "    def mergeKLists(self, lists: List[Optional[ListNode]]) -> Optional[ListNode]:\n",
-    "        # 需要先偵測lists內有沒有值，否則return直接呼叫lists[0]會出錯\n",
-    "        if not lists:\n",
-    "            return None\n",
+    "class ListNode:\n",
+    "    def __init__(self, val=0, next=None):\n",
+    "        self.val = val\n",
+    "        self.next = next"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "**時間複雜度: $O(n log k)$**   \n",
+    "**空間複雜度: $O(k)$**\n",
     "\n",
-    "        # 兩兩merge，直到merge成一個鏈表\n",
-    "        length = len(lists)\n",
-    "        interval = 2\n",
-    "        while interval <= (length * 2):\n",
-    "            print(f\"\\n## interval: {interval}  ##\")\n",
-    "            for i in range(0, length, interval):\n",
-    "                if i+(interval//2) < length:\n",
-    "\n",
-    "                    l1_idx = i\n",
-    "                    l2_idx = i+(interval//2)\n",
-    "                    print(f\"\\n<< {l1_idx, l2_idx} >>\")\n",
-    "\n",
-    "                    print(f\"lists[{l1_idx}]: {lists[l1_idx]}\")\n",
-    "                    print(f\"lists[{l2_idx}]: {lists[l2_idx]}\")\n",
-    "                    \n",
-    "                    lists[l1_idx] = self.mergeTwoLists(lists[l1_idx], lists[l2_idx])\n",
-    "\n",
-    "                    print(f\"new lists[{l1_idx}]: {lists[l1_idx]}\")\n",
-    "                    \n",
-    "            interval *= 2\n",
-    "\n",
-    "        return lists[0]\n",
-    "\n",
-    "\n",
-    "    def mergeTwoLists(self, l1, l2):\n",
-    "        head = ListNode(0)\n",
-    "        move = head#原始move\n",
-    "        while l1 and l2:\n",
-    "            #每次比較l1和l2的第一個node，較小的指定為move的下一個node，以此做排序\n",
-    "            if l1.val < l2.val:\n",
-    "                move.next = l1#指定move的下一個node\n",
-    "                l1 = l1.next#第一個node已被指定排序，開頭移到下一個node，與l2做排序比較\n",
-    "            else:\n",
-    "                move.next = l2\n",
-    "                l2 = l2.next\n",
-    "            move = move.next#move移到下一個node，才能指定之後的node (但head不會跟著移)\n",
-    "        move.next = l1 if l1 else l2#如果其中一個沒了，無法比較，此時另一個就是move的下一個node\n",
-    "        \n",
-    "        return head.next#head初始化時第一個node指定為0，須移到第二個node才能返回\n",
-    "        "
+    "$k$: 總 lists 的長度  \n",
+    "$n$: 總 node 的長度"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
-    "'''Runtime: 10.30%, Memory: 71.6%'''\n",
+    "from typing import List, Optional\n",
     "\n",
-    "# Definition for singly-linked list.\n",
-    "# class ListNode:\n",
-    "#     def __init__(self, val=0, next=None):\n",
-    "#         self.val = val\n",
-    "#         self.next = next\n",
     "class Solution:\n",
     "    def mergeKLists(self, lists: List[Optional[ListNode]]) -> Optional[ListNode]:\n",
-    "        # 需要先偵測lists內有沒有值，否則return直接呼叫lists[0]會出錯\n",
+    "        ..."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Input: lists = [[1,4,5],[1,3,4],[2,6]]\n",
+    "# Output: [1,1,2,3,4,4,5,6]\n",
+    "lists = [\n",
+    "    ListNode(1, ListNode(4, ListNode(5))),\n",
+    "    ListNode(1, ListNode(3, ListNode(4))),\n",
+    "    ListNode(2, ListNode(6))\n",
+    "]\n",
+    "result = Solution().mergeKLists(lists)\n",
+    "\n",
+    "while result:\n",
+    "    print(result.val, end=\", \")\n",
+    "    result = result.next"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "**時間複雜度: $O(n log k)$**   \n",
+    "**空間複雜度: $O(log k)$**\n",
+    "\n",
+    "$k$: 總 lists 的長度  \n",
+    "$n$: 總 node 的長度"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from typing import List, Optional\n",
+    "\n",
+    "class Solution:\n",
+    "    def mergeKLists(self, lists: List[Optional[ListNode]]) -> Optional[ListNode]:\n",
+    "        # 如果輸入的列表為空，直接回傳 None\n",
     "        if not lists:\n",
     "            return None\n",
     "\n",
-    "        # 兩兩merge，直到merge成一個鏈表\n",
-    "        for i in range(1, len(lists)):\n",
-    "            print(f\"\\n<< {0, i} >>\")\n",
+    "        # 使用分治法進行合併，初始傳入的區間為整個 lists 的範圍\n",
+    "        return self.divide(lists, 0, len(lists) - 1) # time: O(n log k)\n",
     "\n",
-    "            print(f\"lists[{0}]: {lists[0]}\")\n",
-    "            print(f\"lists[{i}]: {lists[i]}\")\n",
-    "            \n",
-    "            lists[0] = self.mergeTwoLists(lists[0], lists[i])\n",
+    "    # time, space: O(log k)，每次都將 k 條串列對半切成左右兩半，最多會遞迴 log k 層\n",
+    "    def divide(self, lists, left, right):\n",
+    "        # 如果左邊界大於右邊界，代表無有效鏈結串列，回傳 None\n",
+    "        if left > right:\n",
+    "            return None\n",
     "\n",
-    "            print(f\"new lists[{0}]: {lists[0]}\")\n",
+    "        # 如果左邊界等於右邊界，表示只剩下一個鏈結串列，直接回傳該串列\n",
+    "        if left == right:\n",
+    "            return lists[left]\n",
     "\n",
-    "        return lists[0]\n",
+    "        # 找出中間位置\n",
+    "        mid = left + (right - left) // 2\n",
     "\n",
+    "        # 對左半邊進行遞迴分治\n",
+    "        left_list_node = self.divide(lists, left, mid)\n",
     "\n",
-    "    def mergeTwoLists(self, l1, l2):\n",
-    "        head = ListNode(0)\n",
-    "        move = head#原始move\n",
-    "        while l1 and l2:\n",
-    "            #每次比較l1和l2的第一個node，較小的指定為move的下一個node，以此做排序\n",
-    "            if l1.val < l2.val:\n",
-    "                move.next = l1#指定move的下一個node\n",
-    "                l1 = l1.next#第一個node已被指定排序，開頭移到下一個node，與l2做排序比較\n",
-    "            else:\n",
-    "                move.next = l2\n",
-    "                l2 = l2.next\n",
-    "            move = move.next#move移到下一個node，才能指定之後的node (但head不會跟著移)\n",
-    "        move.next = l1 if l1 else l2#如果其中一個沒了，無法比較，此時另一個就是move的下一個node\n",
+    "        # 對右半邊進行遞迴分治\n",
+    "        right_list_node = self.divide(lists, mid + 1, right)\n",
+    "\n",
+    "        # 合併兩個已排序的鏈結串列\n",
+    "        return self.conquer(left_list_node, right_list_node)\n",
     "        \n",
-    "        return head.next#head初始化時第一個node指定為0，須移到第二個node才能返回\n",
-    "        "
+    "    def conquer(self, list1, list2): # time: O(n)，最後合併時會迭代比較所有值的大小\n",
+    "        # 建立一個虛擬節點作為合併後的鏈結串列的開頭\n",
+    "        dummy = ListNode(0)\n",
+    "        current = dummy\n",
+    "\n",
+    "        # 當兩個鏈結串列都不為空時，進行比較與合併\n",
+    "        while list1 and list2:\n",
+    "            if list1.val <= list2.val:\n",
+    "                # 如果 list1 的值較小，將其接到結果串列後\n",
+    "                current.next = list1\n",
+    "                list1 = list1.next\n",
+    "            else:\n",
+    "                # 如果 list2 的值較小，將其接到結果串列後\n",
+    "                current.next = list2\n",
+    "                list2 = list2.next\n",
+    "\n",
+    "            # 移動 current 指標到下一個位置\n",
+    "            current = current.next\n",
+    "\n",
+    "        # 若其中一個串列還有剩餘節點，直接接到結果串列後\n",
+    "        current.next = list1 if list1 else list2\n",
+    "\n",
+    "        # 回傳合併後的串列（跳過 dummy 節點）\n",
+    "        return dummy.next\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "1, 1, 2, 3, 4, 4, 5, 6, "
+     ]
+    }
+   ],
+   "source": [
+    "# Input: lists = [[1,4,5],[1,3,4],[2,6]]\n",
+    "# Output: [1,1,2,3,4,4,5,6]\n",
+    "lists = [\n",
+    "    ListNode(1, ListNode(4, ListNode(5))),\n",
+    "    ListNode(1, ListNode(3, ListNode(4))),\n",
+    "    ListNode(2, ListNode(6))\n",
+    "]\n",
+    "result = Solution().mergeKLists(lists)\n",
+    "\n",
+    "while result:\n",
+    "    print(result.val, end=\", \")\n",
+    "    result = result.next"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "**時間複雜度: $O(n log k)$**   \n",
+    "**空間複雜度: $O(k)$**\n",
+    "\n",
+    "$k$: 總 lists 的長度  \n",
+    "$n$: 總 node 的長度"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from typing import List, Optional\n",
+    "import heapq\n",
+    "\n",
+    "class Solution:\n",
+    "    def mergeKLists(self, lists: List[Optional[ListNode]]) -> Optional[ListNode]:\n",
+    "        # 如果輸入的 lists 為空，直接回傳 None\n",
+    "        if not lists:\n",
+    "            return None\n",
+    "        \n",
+    "        # 建立一個虛擬節點作為合併後鏈結串列的起點\n",
+    "        dummy = ListNode(0)\n",
+    "        current = dummy  # current 指針用來逐步連接新節點\n",
+    "        min_heap = []  # 最小堆用來維持目前所有鏈結串列的最小節點 # space: O(k)\n",
+    "\n",
+    "        # 將每個非空鏈結串列的頭節點加入最小堆中\n",
+    "        for idx, list_ in enumerate(lists): # time: O(k log k)\n",
+    "            if list_:  # 確保鏈結串列不為空\n",
+    "                # 將 (節點值, 索引, 節點本身) 加入堆中\n",
+    "                # NOTE: heapq 第一個值相同時，會比較第二個值。因為 ListNode 沒辦法比較，所以透過加入 index 在第二個值來比較\n",
+    "                heapq.heappush(min_heap, (list_.val, idx, list_)) # time: O(log k)\n",
+    "\n",
+    "        # 當最小堆不為空時，持續取出最小節點\n",
+    "        while min_heap: # O(n log k)\n",
+    "            _, idx, node = heapq.heappop(min_heap) # 取出當前最小的節點\n",
+    "            current.next = node # 將該節點接到 current 指針後面\n",
+    "            current = current.next  # 移動 current 指針到新節點\n",
+    "\n",
+    "            # 如果該節點有下一個節點，將下一個節點加入堆中\n",
+    "            if node.next:\n",
+    "                heapq.heappush(min_heap, (node.next.val, idx, node.next)) # time: O(log k)\n",
+    "\n",
+    "        # 回傳合併後鏈結串列的起始節點（略過 dummy 節點）\n",
+    "        return dummy.next\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "1, 1, 2, 3, 4, 4, 5, 6, "
+     ]
+    }
+   ],
+   "source": [
+    "# Input: lists = [[1,4,5],[1,3,4],[2,6]]\n",
+    "# Output: [1,1,2,3,4,4,5,6]\n",
+    "lists = [\n",
+    "    ListNode(1, ListNode(4, ListNode(5))),\n",
+    "    ListNode(1, ListNode(3, ListNode(4))),\n",
+    "    ListNode(2, ListNode(6))\n",
+    "]\n",
+    "result = Solution().mergeKLists(lists)\n",
+    "\n",
+    "while result:\n",
+    "    print(result.val, end=\", \")\n",
+    "    result = result.next"
    ]
   }
  ],
@@ -136,7 +265,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.10"
+   "version": "3.12.8"
   },
   "orig_nbformat": 4,
   "vscode": {
