--- a/23. Merge k Sorted Lists.ipynb
+++ b/23. Merge k Sorted Lists.ipynb
@@ -24,6 +24,13 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "### Divide and Conquer"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "**時間複雜度: $O(n log k)$**   \n",
     "**空間複雜度: $O(k)$**\n",
     "\n",
@@ -41,14 +48,67 @@
     "\n",
     "class Solution:\n",
     "    def mergeKLists(self, lists: List[Optional[ListNode]]) -> Optional[ListNode]:\n",
-    "        ..."
+    "        # 若輸入為空，直接回傳 None\n",
+    "        if not lists:\n",
+    "            return None\n",
+    "        \n",
+    "        # 當 lists 中還有超過一個鏈結串列時，持續進行合併\n",
+    "        while len(lists) > 1: # time: O(log k)，每輪會合併 k/2 對，就像樹狀結構，只會有 log k 層\n",
+    "            merged_lists = []  # 用來存放每次合併後的新串列 # space: O(k)\n",
+    "\n",
+    "            # 每次合併兩個鏈結串列\n",
+    "            for i in range(0, len(lists), 2):\n",
+    "                list1 = lists[i]\n",
+    "                list2 = lists[i + 1] if (i + 1) < len(lists) else None # 若存在第 i+1 個串列就取出，否則為 None\n",
+    "                \n",
+    "                merged_list = self.merge(list1, list2) # 合併 list1 和 list2\n",
+    "                \n",
+    "                merged_lists.append(merged_list) # 將合併結果加入新的列表\n",
+    "            \n",
+    "            lists = merged_lists # 更新 lists 為本輪合併後的結果，準備進行下一輪合併\n",
+    "\n",
+    "        return lists[0] # 最後只剩下一個合併後的串列，即為結果\n",
+    "\n",
+    "    # time: O(n)，最後合併時會迭代比較所有值的大小\n",
+    "    def merge(self, list1, list2):\n",
+    "        # 建立一個虛擬節點作為合併後的鏈結串列的開頭\n",
+    "        dummy = ListNode(0)\n",
+    "        current = dummy\n",
+    "\n",
+    "        # 當兩個鏈結串列都不為空時，進行比較與合併\n",
+    "        while list1 and list2:\n",
+    "            if list1.val <= list2.val:\n",
+    "                # 如果 list1 的值較小，將其接到結果串列後\n",
+    "                current.next = list1\n",
+    "                list1 = list1.next\n",
+    "            else:\n",
+    "                # 如果 list2 的值較小，將其接到結果串列後\n",
+    "                current.next = list2\n",
+    "                list2 = list2.next\n",
+    "\n",
+    "            # 移動 current 指標到下一個位置\n",
+    "            current = current.next\n",
+    "\n",
+    "        # 若其中一個串列還有剩餘節點，直接接到結果串列後\n",
+    "        current.next = list1 if list1 else list2\n",
+    "\n",
+    "        # 回傳合併後的串列（跳過 dummy 節點）\n",
+    "        return dummy.next"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 3,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "1, 1, 2, 3, 4, 4, 5, 6, "
+     ]
+    }
+   ],
    "source": [
     "# Input: lists = [[1,4,5],[1,3,4],[2,6]]\n",
     "# Output: [1,1,2,3,4,4,5,6]\n",
@@ -62,6 +122,13 @@
     "while result:\n",
     "    print(result.val, end=\", \")\n",
     "    result = result.next"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Divide and Conquer"
    ]
   },
   {
@@ -113,8 +180,9 @@
     "\n",
     "        # 合併兩個已排序的鏈結串列\n",
     "        return self.conquer(left_list_node, right_list_node)\n",
-    "        \n",
-    "    def conquer(self, list1, list2): # time: O(n)，最後合併時會迭代比較所有值的大小\n",
+    "    \n",
+    "    # time: O(n)，最後合併時會迭代比較所有值的大小\n",
+    "    def conquer(self, list1, list2):\n",
     "        # 建立一個虛擬節點作為合併後的鏈結串列的開頭\n",
     "        dummy = ListNode(0)\n",
     "        current = dummy\n",
@@ -166,6 +234,13 @@
     "while result:\n",
     "    print(result.val, end=\", \")\n",
     "    result = result.next"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Min heap"
    ]
   },
   {
