--- a/104. Maximum Depth of Binary Tree.ipynb
+++ b/104. Maximum Depth of Binary Tree.ipynb
@@ -22,6 +22,24 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### DFS"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "**時間複雜度: $O(n)$**  \n",
+    "**空間複雜度: $O(n)$**\n",
+    "\n",
+    "最壞情況：$O(n)$（完全不平衡的樹）  \n",
+    "最佳情況：$O(log n)$（平衡樹）"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 2,
    "metadata": {},
@@ -47,10 +65,7 @@
     "            right = None\n",
     "        ),\n",
     "    )\n",
-    ")\n",
-    "\n",
-    "# Input: root = [3,9,20,null,null,15,7]  \n",
-    "# Output: 3"
+    ")"
    ]
   },
   {
@@ -59,28 +74,31 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "from typing import Optional\n",
+    "\n",
     "class Solution:\n",
-    "    def maxDepth(self, root):\n",
-    "        print(\"-\" *200)\n",
+    "    def maxDepth(self, root: Optional[TreeNode]) -> int:\n",
+    "        # print(\"-\" *200)\n",
+    "        # 若根節點為空，代表樹為空，深度為 0\n",
     "        if not root:\n",
-    "            print(\"not root\")\n",
+    "            # print(\"not root\")\n",
     "            return 0\n",
     "\n",
-    "        print(f\"root.val = {root.val}\")\n",
+    "        # print(f\"root.val = {root.val}\")\n",
     "\n",
     "\n",
-    "        print(f\"{root.val} - left\")\n",
-    "        left = self.maxDepth(root.left)\n",
-    "        print(f\"{root.val} - left = {left}\")\n",
+    "        # print(f\"{root.val} - left\")\n",
+    "        left = self.maxDepth(root.left) # 遞迴計算左子樹的最大深度\n",
+    "        # print(f\"{root.val} - left = {left}\")\n",
     "\n",
     "        \n",
-    "        print(f\"{root.val} - right\")\n",
-    "        right = self.maxDepth(root.right)\n",
-    "        print(f\"{root.val} - right = {right}\")\n",
+    "        # print(f\"{root.val} - right\")\n",
+    "        right = self.maxDepth(root.right) # 遞迴計算右子樹的最大深度\n",
+    "        # print(f\"{root.val} - right = {right}\")\n",
     "\n",
     "\n",
-    "        print(f\"- return (max({left}, {right}) + 1) = {max(left, right) + 1}\")\n",
-    "        return max(left, right) + 1"
+    "        # print(f\"- return (max({left}, {right}) + 1) = {max(left, right) + 1}\")\n",
+    "        return max(left, right) + 1 # 回傳左右子樹最大深度中的較大者 + 1（加上根節點本身這一層）"
    ]
   },
   {
@@ -88,59 +106,6 @@
    "execution_count": 4,
    "metadata": {},
    "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "--------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------\n",
-      "root.val = 3\n",
-      "3 - left\n",
-      "--------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------\n",
-      "root.val = 9\n",
-      "9 - left\n",
-      "--------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------\n",
-      "not root\n",
-      "9 - left = 0\n",
-      "9 - right\n",
-      "--------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------\n",
-      "not root\n",
-      "9 - right = 0\n",
-      "- return (max(0, 0) + 1) = 1\n",
-      "3 - left = 1\n",
-      "3 - right\n",
-      "--------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------\n",
-      "root.val = 20\n",
-      "20 - left\n",
-      "--------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------\n",
-      "root.val = 15\n",
-      "15 - left\n",
-      "--------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------\n",
-      "not root\n",
-      "15 - left = 0\n",
-      "15 - right\n",
-      "--------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------\n",
-      "not root\n",
-      "15 - right = 0\n",
-      "- return (max(0, 0) + 1) = 1\n",
-      "20 - left = 1\n",
-      "20 - right\n",
-      "--------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------\n",
-      "root.val = 7\n",
-      "7 - left\n",
-      "--------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------\n",
-      "not root\n",
-      "7 - left = 0\n",
-      "7 - right\n",
-      "--------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------\n",
-      "not root\n",
-      "7 - right = 0\n",
-      "- return (max(0, 0) + 1) = 1\n",
-      "20 - right = 1\n",
-      "- return (max(1, 1) + 1) = 2\n",
-      "3 - right = 2\n",
-      "- return (max(1, 2) + 1) = 3\n"
-     ]
-    },
     {
      "data": {
       "text/plain": [
@@ -153,13 +118,124 @@
     }
    ],
    "source": [
+    "# Input: root = [3,9,20,null,null,15,7]  \n",
+    "# Output: 3\n",
+    "\n",
+    "Solution().maxDepth(root)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### BFS"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "**時間複雜度: $O(n)$**  \n",
+    "**空間複雜度: $O(n)$**"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "root = TreeNode(\n",
+    "    val = 3,\n",
+    "    left = TreeNode(\n",
+    "        val = 9,\n",
+    "        left = None,\n",
+    "        right = None\n",
+    "    ),\n",
+    "    right = TreeNode(\n",
+    "        val = 20,\n",
+    "        left = TreeNode(\n",
+    "            val = 15,\n",
+    "            left = None,\n",
+    "            right = None\n",
+    "        ),\n",
+    "        right = TreeNode(\n",
+    "            val = 7,\n",
+    "            left = None,\n",
+    "            right = None\n",
+    "        ),\n",
+    "    )\n",
+    ")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from typing import Optional\n",
+    "from collections import deque\n",
+    "\n",
+    "class Solution:\n",
+    "    def maxDepth(self, root: Optional[TreeNode]) -> int:\n",
+    "        # 若根節點為空，代表樹的深度為 0\n",
+    "        if not root:\n",
+    "            return 0\n",
+    "        \n",
+    "        # 使用雙端隊列實作 BFS 的 queue，初始放入根節點\n",
+    "        queue = deque([root])\n",
+    "        # 記錄樹的最大深度（層數）\n",
+    "        level = 0\n",
+    "\n",
+    "        # 當隊列不為空時，持續進行 BFS\n",
+    "        while queue:\n",
+    "            # 當前層的節點數量（用來控制一層一層地遍歷）\n",
+    "            length = len(queue)\n",
+    "            for _ in range(length):\n",
+    "                # 從隊列中取出一個節點\n",
+    "                node = queue.popleft()\n",
+    "                \n",
+    "                # 如果有左子節點，加入隊列中等待後續處理\n",
+    "                if node.left:\n",
+    "                    queue.append(node.left)\n",
+    "                # 如果有右子節點，加入隊列中等待後續處理\n",
+    "                if node.right:\n",
+    "                    queue.append(node.right)\n",
+    "\n",
+    "            # 每完成一層的遍歷，深度加一\n",
+    "            level += 1\n",
+    "\n",
+    "        return level"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "3"
+      ]
+     },
+     "execution_count": 7,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# Input: root = [3,9,20,null,null,15,7]  \n",
+    "# Output: 3\n",
+    "\n",
     "Solution().maxDepth(root)"
    ]
   }
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": ".venv",
+   "display_name": ".venv (3.12.8)",
    "language": "python",
    "name": "python3"
   },
@@ -173,7 +249,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.10"
+   "version": "3.12.8"
   },
   "orig_nbformat": 4
  },
